--- a/sass/components/_grid.scss
+++ b/sass/components/_grid.scss
@@ -2,30 +2,65 @@
 /*              Grid System                      */
 /* ============================================= */
 
-.container {
-    padding: 0 10px;
+.grid-container {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+    grid-template-areas: 
+        "header"
+        "navigation"
+        "main";
   }
   
-  .row {
-    display: flex;
-    flex-direction: column;
-    padding: 1em 10px;
-  }
-  
-  [class^=col] {
-    margin-top: 10px;
-    flex-basis: 100%;
-    min-height: 25px;
-    padding: 10px;
-    border-radius: 5px;
-  }
-  
+/***************GRID AREAS************/
+header {
+  grid-area: header;
+  display: flex;
+  padding: 10px;
+  background-color: #7477bf;
+}
 
-  .theme.col {
-    @include column-color ($col-colors)
-  }
-  
-  .card {
-    flex-basis: 100%;
-  }
+nav {
+  grid-area: navigation;
+}
+
+main {
+  grid-area: main;
+}
+
+.main-header {
+  grid-area: main-header;
+}
+
+.traffic {
+  grid-area: traffic;
+}
+
+.daily {
+  grid-area: daily;
+}
+
+.mobile {
+  grid-area: mobile;
+}
+
+.social {
+  grid-area: social;
+}
+
+.members {
+  grid-area: members;
+}
+
+.activity {
+  grid-area: activity;
+}
+
+.message {
+  grid-area: message;
+}
+
+.settings {
+  grid-area: settings;
+}
   
