--- a/sass/components/_media-queries.scss
+++ b/sass/components/_media-queries.scss
@@ -3,55 +3,32 @@
 /* ============================================= */
 @media (min-width: $breakpoint) {
 
-    .container {
-      max-width: 1400px;
-      @include center;
+  .grid-container {
+    grid-template-columns: 55px 1fr;
+    grid-template-areas:
+      "header header"
+      "navigation main";
     }
-    
-    .centered {
-      @include center;
+
+  main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+      "main-header main-header"
+      "traffic traffic"
+      "daily mobile"
+      "social social"
+      "members activity"
+      "message settings";
     }
-    
-    .row {
-      flex-direction: row;
+
+  .widget{
+    &-container-full{
+      width: 90vw;
     }
-    
-    [class^=col] {
-      display: flex;
-      justify-content: center;
-      margin-top: 0;
-      align-items: center;
+
+    &-container-half {
+      width: 45vw;
     }
-    
-    [class^=col] + [class^=col] {
-      margin-left: 10px;
-    }
-    
-    .col{
-    @include column-flexb($col-flexb)
-    }
-    
-    .nav {
-      flex-direction: row;
-      justify-content: flex-end;
-      align-items: center;
-    }
-    
-    .nav-link {
-      flex-basis: 100px;
-    }
-    
-    .btn {
-      padding: 10px 30px;
-    }
-    
-    .btn + .btn {
-      margin-left: 10px;
-    }
-    
-    .logo {
-      margin-left: initial;
-      margin-right: initial;
-    }
-    
-    }
+  }
+}
