--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -20,7 +20,7 @@
     }
     
     &-link:hover {
-      color: $white-color;
+      color: $white;
       background-color: lighten($primary-color, 15%);
     }
 
