--- a/sass/components/_images.scss
+++ b/sass/components/_images.scss
@@ -2,23 +2,8 @@
 /* ============================================= */
 /*              Images                           */
 /* ============================================= */
-.img{
-    &-avatar {
-      @include center;
-      margin-top: 10px;
-      max-width: 100%; 
-      max-height: 100%;
-    }
-    
-    &-frame {
-      @include center;
-      margin-top: 10px;
-      max-width: 100%;
-      padding: 13px;
-      border: 1px solid #ccc;
-    }
-    
-    &-logo {
-      @include center;
-    }
+
+.profile-image{
+    border-radius: 50%;
+    height: 50px;
 }
