--- a/sass/components/_media-queries.scss
+++ b/sass/components/_media-queries.scss
@@ -1,7 +1,7 @@
 /* ============================================= */
 /*              Media Queries                    */
 /* ============================================= */
-@media (min-width: $breakpoint) {
+@media (min-width: $breakpoint-m) {
 
   .grid-container {
     grid-template-columns: 55px 1fr;
