remove media qs

--- a/css/styles.css
+++ b/css/styles.css
@@ -458,7 +458,7 @@ main {
 /* Header Styles */
 /* ============================================= */
 header {
-  width: 100vw;
+  width: 100%;
   color: #FFF;
   background-color: #7477BF;
   font-weight: normal;
@@ -516,43 +516,6 @@ header .notification-bell, header img, header h3 {
   }
   .widget-container-half {
     width: 45vw;
-  }
-
-  header {
-    width: 100vw;
-    color: #FFF;
-    background-color: #7477BF;
-    font-weight: normal;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  header span {
-    font-weight: bold;
-  }
-  header .logo {
-    margin-right: auto;
-    margin-left: 20px;
-    display: inline-block;
-  }
-  header .user, header .name {
-    display: inline-block;
-    margin-left: auto;
-    margin-right: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  header .notification-bell img {
-    height: 30px;
-    padding-right: 20px;
-  }
-  header .name {
-    padding-left: 20px;
-    border-left: 1px solid black;
-  }
-  header .notification-bell, header img, header h3 {
-    display: inline-block;
   }
 }
 
