navbar on mobile view complete

--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -2,9 +2,9 @@
 //COLORS
 $primary-color: #7477BF;
 $white: #FFF;
-$default-color: #666666;
+$default-color: #a0a0a0;
 $green: #81C98F;
-$warning-color: #fd7856;
+$nav-bg: #4D4C72;
 
 //BreakPoints
 $breakpoint-m: 768px;
