--- a/css/styles.css
+++ b/css/styles.css
@@ -368,23 +368,19 @@ template {
 /* ============================================= */
 /*              Navigation                       */
 /* ============================================= */
-.nav {
-  padding-left: 0;
-  flex-basis: 100%;
+nav {
+  background-color: #4D4C72;
   display: flex;
-  flex-direction: column;
-}
-.nav-link {
-  text-align: center;
-  border-radius: 5px;
+  justify-content: space-around;
   padding: 10px 0;
-  display: block;
-  width: 100%;
-  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
-.nav-link:hover {
-  color: #FFF;
-  background-color: #a8aad7;
+nav svg {
+  height: 30px;
+  fill: #a0a0a0;
+  transition: fill ease-in 0.5s;
+}
+nav svg:hover {
+  fill: #ededed;
 }
 
 /* ============================================= */
