--- a/sass/components/_media-queries.scss
+++ b/sass/components/_media-queries.scss
@@ -32,4 +32,16 @@
     }
   }
 
+  nav{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0;
+
+    svg{
+      margin: 20px;
+    }
+  }
+
 }
