--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -2,6 +2,7 @@
 //COLORS
 $primary-color: #7477BF;
 $white: #FFF;
+$secondary-color: #FBFBFB;
 $default-color: #a0a0a0;
 $green: #81C98F;
 $nav-bg: #4D4C72;
