--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,7 +7,7 @@
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
     font-weight: normal;
-    
+    list-style-type: none;
   }
   
 .widget{
