--- a/sass/components/_traffic.scss
+++ b/sass/components/_traffic.scss
@@ -5,13 +5,12 @@
  .traffic-header{
     display: flex;
     justify-content: space-between;
-
+    margin: 0 10px;
     .traffic-nav{
         display: flex;
         justify-content: space-around;
-        margin-right: 20px;
         li{
-            margin-right: 10px;
+            margin-right: 20px;
         }
     }
  }
