style social svgs

--- a/css/styles.css
+++ b/css/styles.css
@@ -531,6 +531,24 @@ header .notification-bell, header img, header h3 {
 }
 
 /* ============================================= */
+/*              Social styles                    */
+/* ============================================= */
+.social .social-image {
+  display: flex;
+  align-items: center;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: #7477BF;
+}
+.social .social-image svg {
+  display: block;
+  margin: 0 auto;
+  height: 70px;
+  fill: white;
+}
+
+/* ============================================= */
 /*              Media Queries                    */
 /* ============================================= */
 @media (min-width: 768px) {
