--- a/sass/components/_media-queries.scss
+++ b/sass/components/_media-queries.scss
@@ -53,4 +53,11 @@
     border-bottom: 1px $default-color solid;;
     border-left: 1px $default-color solid;
  }
+ .social{
+
+    &-container{
+    margin: 30px;
+    
+    }
+ }
 }
