--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -3,7 +3,23 @@
 /* ============================================= */
 
 .social{
-    .social-image{
+
+    &-content{
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+
+    &-container{
+        display: flex;
+        background-color: $secondary-color;
+        padding: 20px 100px 0px 20px;
+        margin: 10px;
+        border: 1px $default-color solid;
+        
+    }
+
+    &-image{
         display: flex;
         align-items: center;
         height: 100px;
@@ -15,9 +31,24 @@
             display: block;
             margin:  0 auto;
             height: 70px;
-            fill: white;
-            
         }
     }
-    
+
+    &-text{
+        margin-left: 20px;
+        
+    }
+
+    &-name{
+        color: $primary-color;
+        font-weight: bold;
+        font-size: larger;
+        margin-bottom: 0px;
+    }
+
+    &-number{
+        margin-top: 2px;
+        font-size: 2rem;
+        font-weight: lighter;
+    }
 }
