--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -4,6 +4,8 @@
 
 .social{
 
+    border-bottom: 1px $default-color solid;
+    padding-bottom: 50px;
     &-content{
         display: flex;
         justify-content: space-around;
@@ -16,6 +18,7 @@
         padding: 20px 100px 0px 20px;
         margin: 10px;
         border: 1px $default-color solid;
+        min-width: 20%;
         
     }
 
@@ -50,5 +53,6 @@
         margin-top: 2px;
         font-size: 2rem;
         font-weight: lighter;
+        color: $default-color;
     }
 }
