--- a/css/styles.css
+++ b/css/styles.css
@@ -615,6 +615,40 @@ header .notification-bell, header img, header h3 {
 }
 
 /* ============================================= */
+/*         message and settings components  */
+/* ============================================= */
+.message {
+  padding-bottom: 20px;
+}
+.message .widget-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.message .widget-container input {
+  padding: 10px 10px;
+}
+.message .widget-container textarea {
+  padding: 10px 10px 50px 10px;
+}
+.message .widget-container input, .message .widget-container textarea {
+  background-color: #FBFBFB;
+  border: 1px #a0a0a0 solid;
+  margin-bottom: 20px;
+}
+.message .widget-container ::placeholder {
+  color: #a0a0a0;
+}
+.message .widget-container button {
+  background-color: #7477BF;
+  color: #FFF;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+/* ============================================= */
 /*              Media Queries                    */
 /* ============================================= */
 @media (min-width: 768px) {
