--- a/sass/utilities/_mixins.scss
+++ b/sass/utilities/_mixins.scss
@@ -4,3 +4,12 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+@mixin button {
+    background-color: $primary-color;
+    color: $white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+}
