--- a/sass/components/_members&activity.scss
+++ b/sass/components/_members&activity.scss
@@ -39,7 +39,7 @@
     .arrow{
         color: $primary-color;
         font-size: 3rem;
-        
+        margin-left: 5px;
     }
 
     :last-child{
