--- a/sass/components/_message&settings.scss
+++ b/sass/components/_message&settings.scss
@@ -30,12 +30,21 @@
                 color: $default-color;
             }
 
-            button{
-                @include button;
-            }
+
         }
 
 
 
     }
 }
+
+.button{
+    &-primary, &-disabled{
+        @include button;
+    }
+
+    &-disabled{
+        background-color: $default-color;
+    }
+}
+
