--- a/sass/components/_media-queries.scss
+++ b/sass/components/_media-queries.scss
@@ -15,6 +15,7 @@
     grid-template-columns: 1fr 1fr;
     grid-template-areas: 
       "main-header main-header"
+      "alert alert"
       "traffic traffic"
       "daily mobile"
       "social social"
