--- a/sass/components/_message&settings.scss
+++ b/sass/components/_message&settings.scss
@@ -25,7 +25,7 @@
                 border: 1px $default-color solid;
                 margin-bottom: 20px;
             }
-            ::placeholder, option{
+            ::placeholder{
                 color: $default-color;
             }
 
