--- a/css/styles.css
+++ b/css/styles.css
@@ -707,6 +707,7 @@ header .notification-bell, header img, header h3 {
   display: inline-block;
   width: 100px;
   height: 34px;
+  margin: 10px 0;
 }
 
 /* Hide default HTML checkbox */
@@ -818,6 +819,10 @@ input:checked + .slider:before {
   .settings {
     border-left: 1px #a0a0a0 solid;
     border-top: none;
+  }
+  .settings .widget-toggle P {
+    flex-grow: 0;
+    width: 30%;
   }
 
   .alert-banner {
