--- a/css/styles.css
+++ b/css/styles.css
@@ -520,7 +520,7 @@ header .notification-bell, header img, header h3 {
 .alert {
   background-color: #7477BF;
   color: #FFF;
-  margin: 0 10px;
+  margin: 10px;
   border-radius: 5px;
 }
 .alert p {
