--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -71,7 +71,7 @@ header {
 .alert {
     background-color: $primary-color;
     color: $white;
-    margin: 0 10px;
+    margin: 10px;
     border-radius: 5px;
 
     p{
