--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -33,10 +33,16 @@ header {
         justify-content: space-between;
     }
     
-    .notification-bell img{
+    .notification-bell svg{
         height: 30px;
         padding-right: 20px;
         padding-left: 20px;
+        fill: $white;
+        transition: fill ease-in .3s;
+    
+        &:hover{
+          fill: $default-color;
+        }
     }
 
     .name{
