--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -96,4 +96,32 @@ header {
             padding: 10px;
         }
     }
+
+    &-tasks{
+        position: absolute;
+        background-color: $secondary-color;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    
+        &-close{
+            padding: 5px 20px;
+            color: red;
+            text-align: right;
+            font-weight: bolder;
+        }
+
+        a{
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            
+            :hover{
+                background-color: $default-color;
+            }
+        }
+
+ 
+    }
+
 }
