--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -27,3 +27,10 @@ section{
 }
 
 .show {display:block;}
+
+.active{
+  background-color: $green;
+  color: $white;
+  font-weight: bold;
+  border-radius: 5px;
+}
