--- a/sass/components/_traffic.scss
+++ b/sass/components/_traffic.scss
@@ -9,8 +9,11 @@
     .traffic-nav{
         display: flex;
         justify-content: space-around;
+        align-items: center;
+
         li{
             margin-right: 20px;
+            padding: 5px;
         }
     }
  }
