--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -61,6 +61,11 @@ header {
     align-items: center;
     background-color: $secondary-color;
     justify-content: space-between;
+    padding: 20px 0;
+
+    .headline{
+        margin-top: 0;
+    }
 }
 
 .alert {
