--- a/sass/components/_media-queries.scss
+++ b/sass/components/_media-queries.scss
@@ -26,6 +26,7 @@
   .widget{
     &-container-full{
       width: 90vw;
+      @include center
     }
 
     &-container-half {
@@ -47,6 +48,8 @@
 
   .traffic-header{
     margin: 0 20px;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   .daily, .mobile{
@@ -113,6 +116,7 @@
     align-items: center;
     background-color: $secondary-color;
     justify-content: space-between;
+    padding: 0;
    
     .headline{
         background-color: $white;
@@ -125,6 +129,10 @@
        margin-right: 20px;
        height: 100%;
     }
+  }
+
+  h3{
+    text-align: left;
   }
 }
 
