--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -27,7 +27,6 @@ header {
     .user, .name{
         display: inline-block;
         margin-left: auto;
-        margin-right: 10px;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -49,6 +48,10 @@ header {
         padding-left: 20px;
         border-left: 1px solid black;
         height: 50px;
+
+        &-header{
+            display: none;
+        }
     }
      .notification-bell, img, h3{
         display: inline-block;
