--- a/css/styles.css
+++ b/css/styles.css
@@ -356,10 +356,6 @@ template {
   list-style-type: none;
 }
 
-.widget-container-full, .widget-container-half {
-  width: 95vw;
-}
-
 section {
   padding: 0 10px;
 }
@@ -844,7 +840,11 @@ input:checked + .slider:before {
     margin-right: auto;
   }
   .widget-container-half {
-    width: 45vw;
+    width: 40vw;
+    padding-bottom: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   nav {
