--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -43,6 +43,10 @@ header {
         &:hover{
           fill: $default-color;
         }
+
+        circle{
+            fill: $green;
+        }
     }
 
     .name{
